--- a/source/resource/css/Theme.css
+++ b/source/resource/css/Theme.css
@@ -82,6 +82,23 @@ body {
 
 
 /*
+      MINIMIZE
+*/
+
+body.minimize [minimizable] {
+
+   display: none;
+
+}
+
+body.minimize > content {
+
+   height: calc(100% - 16px);
+
+}
+
+
+/*
       NAVIGATION
 */
 
@@ -126,10 +143,24 @@ navigation > .logIO {
       CONTENT
 */
 
-main {
+content {
 
    width: calc(100% - 16px);
-   height: -webkit-fill-available;
+   height: calc(100% - 38px - 16px);
+
+   padding: 8px;
+
+}
+
+
+/*
+      MAIN
+*/
+
+main {
+
+   width: 100%;
+   height: 100%;
 
    display: flex;
    flex-direction: row;
@@ -138,7 +169,7 @@ main {
    justify-content: stretch;
    align-items: flex-start;
 
-   padding: 8px;
+   overflow: hidden;
 
 }
 
@@ -149,6 +180,8 @@ left {
    min-height: fit-content;
    height: 100%;
 
+   overflow: scroll;
+
 }
 
 
@@ -156,6 +189,13 @@ middle {
 
    width: 100%;
    height: 100%;
+
+   display: flex;
+   flex-direction: column;
+   flex-wrap: nowrap;
+   align-content: center;
+   justify-content: flex-start;
+   align-items: center;
 
 }
 
@@ -167,7 +207,7 @@ middle {
 left > taglist {
 
    width: 132px;
-   height: calc(100% - 36px);
+   height: fit-content;
 
    display: flex;
    flex-direction: column;
@@ -355,17 +395,29 @@ search > primary > bar > tags > tag {
    background-color: var(--blue-dim);
    border: 2px solid var(--blue-dim);
 
-   border: 2px solid transparent;
+   /* border: 2px solid transparent; */
 
    transition-duration: .2s;
-   cursor: var(--cursor-x);
+   cursor: var(--tag-cursor);
 
 }
 
 search > primary > bar > tags > tag:hover {
 
+   background-color: var(--tag-border);
+
+}
+
+search > primary > bar > tags > tag.negative {
+
    border-color: #ff83836b;
    background-color: #844a4a;
+
+}
+
+search > primary > bar > tags > tag.negative:hover {
+
+   background-color: var(--tag-border-invert);
 
 }
 
